@@ -43,7 +43,7 @@ public class CombatZone2ManageShotState extends State {
 
         switch (shot.getSide()) {
             case Side.FRONT:   //arriva da davanti
-                for (int i = 5; i <= 9; i++) {
+                for (int i = 5; (i <= 9)&&(!hit); i++) {
                     Coordinates coordinates = new Coordinates(number, i);
                     component = player.getShipBoard().getComponent(coordinates);
                     if (component != null) {
@@ -53,7 +53,7 @@ public class CombatZone2ManageShotState extends State {
                     }
                 }
             case Side.RIGHT:
-                for (int i = 10; i >= 4; i--) {
+                for (int i = 10; (i >= 4)&&(!hit); i--) {
                     Coordinates coordinates = new Coordinates(i, number);
                     component = player.getShipBoard().getComponent(coordinates);
                     if (component != null) {
@@ -63,7 +63,7 @@ public class CombatZone2ManageShotState extends State {
                     }
                 }
             case Side.LEFT:
-                for (int i = 4; i <= 10; i++) {
+                for (int i = 4; (i <= 10)&&(!hit); i++) {
                     Coordinates coordinates = new Coordinates(i, number);
                     component = player.getShipBoard().getComponent(coordinates);
                     if (component != null) {
@@ -73,7 +73,7 @@ public class CombatZone2ManageShotState extends State {
                     }
                 }
             case Side.REAR:
-                for (int i = 0; i <= 4; i++) {
+                for (int i = 0; (i <= 4)&&(!hit); i++) {
                     Coordinates coordinates = new Coordinates(number, i);
                     component = player.getShipBoard().getComponent(coordinates);
                     if (component != null) {
@@ -113,7 +113,7 @@ public class CombatZone2ManageShotState extends State {
             throw new IllegalArgumentException("Invalid item type, expected BATTERIES");
         }
         Player player = controller.getModel().getPlayer(playerName);
-        if (player != context.getSpecialPlayers().get(0)) {
+        if (player != context.getSpecialPlayers().getFirst()) {
             controller.getModel().setError(true);
             throw new IllegalArgumentException("It's not the player's turn");
         }
